[package]
name = "avail-finality-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = [ "process", "fs", "rt-multi-thread"]}
# Substrate
subxt = "0.27"
sp-core = { version = "16.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1"
scale-info = { version = "2.0.0", features = ["bit-vec"] }
avail-subxt = {git = "https://github.com/availproject/avail.git", branch = "develop"}
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }